# shop-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml  test.py
app/: auth.py  database.py  main.py  schemas.py
app/migrations/: env.py
app/migrations/versions/: 02264efb6285_initial_migration_for_postgresql.py  6c9edbaa1d4e_add_reviews.py  7f5e3ea0072a_create_categories_and_products_tables.py  825e3fdabc14_change_type_for_field.py  9cfba72a01f3_add_user_model.py  b3f661122984_add_dates_fields_create_and_update.py  eacea3f1d439_add_field_review_for_products.py
app/models/: products.py  reviews.py
app/routers/: categories.py  products.py  reviews.py  users.py
app/schemas/: __init__.py  products.py  reviews.py
