[tool.poetry]
name = "shop-api"
version = "0.1.0"
description = "FastAPI интернет-магазин"
authors = ["andrejganza <andrejganza@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = ">=0.110.0,<1.0.0"
uvicorn = { version = "^0.29.0", extras = ["standard"] }
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
pydantic = {extras = ["email"], version = "^2.12.5"}
asyncpg = "^0.31.0"
greenlet = "^3.3.1"
bcrypt = "<4.0.0"
pyjwt = "^2.8.0"
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
python-multipart = "^0.0.9"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
